--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.beta.acuacomapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/icon_launcher_acuacom"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/icon_launcher_round_acuacom"
         android:supportsRtl="true"
-        android:theme="@style/Principal">
-        <activity android:name=".MenuPrincipal"></activity>
-        <activity android:name=".MenuGranjasAlimento"/>
-        <activity android:name=".CapturaAlimento"/>
-        <activity android:name=".MenuGranjasBiometrias"/>
-        <activity android:name=".CapturaBiometrias"/>
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".Login">
+        android:theme="@style/Principal"
+        android:usesCleartextTraffic="true">
+
+        <activity android:name=".MenuPrincipal" />
+        <activity android:name=".MenuGranjasAlimento" />
+        <activity android:name=".CapturaAlimento" />
+        <activity android:name=".MenuGranjasBiometrias" />
+        <activity android:name=".CapturaBiometrias" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name="Login" />
+        <activity android:name=".SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,5 +30,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
